tests/custom/STARIS_2022/basic/tuples/tuple-bounds-error/stderr.expected
Error:
    Parser error in file: bound.essence Error is:
ValidatorError bound.essence:4:17:
  |
4 | such that b = a[0]
  |                 ^
Error: Tuple index 0 out of bounds

